@@ -16,6 +16,8 @@ pdftex-quiet/pdftex-quiet
 pdfxup/pdfxup
 pst-pdf/ps4pdf
 simpdftex/simpdftex
+texlive-extra/allcm.sh
+texlive-extra/allneeded.sh
 texosquery/texosquery.sh
 texosquery/texosquery-jre5.sh
 texosquery/texosquery-jre8.sh
@@ -147,8 +149,6 @@ texlive/tlmgr.pl
 texlive/updmap-sys.sh
 texlive/updmap-user.sh
 texlive/updmap.pl
-texlive-extra/allcm.sh
-texlive-extra/allneeded.sh
 texliveonfly/texliveonfly.py
 texloganalyser/texloganalyser
 texplate/texplate.sh
